fixed display content overflow

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
     border-radius: 2%;
     background-color: var(--main-color-100);
     width: 280px;
-    max-height: 461px;
+    max-height: auto;
     height: auto;
     padding: 1rem;
     box-shadow: 4px 4px 4px 1px rgba(0, 0, 0, 0.5);
@@ -114,6 +114,17 @@ button:first-of-type:hover,button:last-of-type:hover  {
     color: var(--main-color-400);
     border: 1px solid var(--border-color);
     margin-bottom: 1rem;
+    flex-direction: column;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    word-wrap: break-word;
+    word-break: break-all;
+
+}
+
+.current-output {
+    font-size: 2rem;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -128,22 +139,3 @@ button:first-of-type:hover,button:last-of-type:hover  {
     }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-}
